# cellscan

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/: splits.csv
reports/: metrics.json  train_history.json
scripts/: benchmark_latency.py  git_history.sh  prepare_data.py  run_full_pipeline.py
src/cellscan/: __init__.py  calibrate.py  config.py  data.py  evaluate.py  gradcam.py  model.py  train.py  utils.py
tests/: test_cellscan.py
